EncryptionUtil now uses more secure cypher "AES/GCM/NoPadding" with EncryptionKey default key size now being 256.